--- a/index.html
+++ b/index.html
@@ -229,6 +229,33 @@
           </div>
         </div>
 
+
+		<div class="row mb-5">
+          <div class="col-lg-6 order-1 order-lg-2 mb-4 mb-lg-0">
+            <img src="images/fifth_project.jpg" alt="Image" class="img-fluid" class="img-fluid">
+          </div>
+          <div class="col-lg-5 h-100 jm-sticky-top mr-auto order-2 order-lg-1">
+            <h3>The Sunny Corner</h3>
+            <p class="mb-4">A American Based Fashionable jewelry and accessories for the free-spirited soul!</p>
+            <p class="mb-5"><strong class="text-black">Role:</strong> Design, Illustration, Web, Wordpress</p>
+            <p class="mb-4"><a href="https://www.thesunnycorner.com/" class="readmore">Visit website</a></p>
+          </div>
+        </div>
+		
+				<div class="row mb-5">
+          <div class="col-lg-6 order-1 order-lg-2 mb-4 mb-lg-0">
+            <img src="images/sixth_project.jpg" alt="Image" class="img-fluid" class="img-fluid">
+          </div>
+          <div class="col-lg-5 h-100 jm-sticky-top mr-auto order-2 order-lg-1">
+            <h3>Camping Needs USA</h3>
+            <p class="mb-4">A American Based Company that Sell tourist related stuff all around USA!</p>
+            <p class="mb-5"><strong class="text-black">Role:</strong> Design, Illustration, Web, Wordpress</p>
+            <p class="mb-4"><a href="#" class="readmore">Visit website</a></p>
+          </div>
+        </div>
+
+
+
           
         </div>
 
