--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 		
 		<div class="row mb-5">
           <div class="col-lg-6 order-1 order-lg-2 mb-4 mb-lg-0">
-            <img src="www.fiverr.com_fahimfreelancer_.png" alt="Image" class="img-fluid" class="img-fluid">
+            <img src="fiverr_project.png" alt="Image" class="img-fluid" class="img-fluid">
           </div>
           <div class="col-lg-5 h-100 jm-sticky-top mr-auto order-2 order-lg-1">
             <h3>My Fiverr Profile</h3>
